# fast-api-example

./: .env.template  .gitignore  README.md  pyproject.toml  test_db.py
migrations/: env.py
migrations/versions/: 8d7ce3fa2a22_initial_schema.py  c102ea2122a2_initial_tables.py  eb397942a98a_create_dbmeta.py
scripts/: init_db.py
simple_api/: main.py
simple_api/api/: deps.py
simple_api/api/v1/: routers.py
simple_api/api/v1/endpoints/: booking_controller.py  health.py  property_controller.py
simple_api/core/: config.py  lifespan.py  logging.py
simple_api/dependencies/: booking_deps.py  property_deps.py
simple_api/domain/booking/: booking_service.py
simple_api/domain/booking/usecases/: calculate_booking_price_usecase.py  check_availability_usecase.py  validate_booking_dates_usecase.py
simple_api/domain/exceptions/: domain_exception.py
simple_api/domain/property/: property_service.py
simple_api/infra/: db.py
simple_api/infra/exceptions/: exceptions.py
simple_api/infra/models/: booking.py  db_meta.py  property.py
simple_api/infra/repositories/: base_repository.py  booking_repository.py  property_repository.py
simple_api/schemas/: booking.py  property.py
tests/unit/domain/: test_booking_service.py
tests/unit/domain/booking/: test_booking_service.py
tests/unit/domain/booking/usecases/: test_calculate_booking_price_uc.py  test_check_availability_uc.py  test_validate_booking_dates_uc.py
tests/unit/domain/property/: test_property_service.py
