[tool.poetry]
name = "simple-api"
version = "0.1.0"
description = ""
authors = ["RobertoFORTs <bobfortesneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
structlog = "^25.4.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
